Load & read the data

--- a/eca_trend.ipynb
+++ b/eca_trend.ipynb
@@ -30,8 +30,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "addr_master = \"spark://192.168.1.1:7077\"  # rember to set the real IP!\n",
-    "cores = 2"
+    "IP = \"192.168.1.1\"  # rember to set the real IP!\n",
+    "cores = 8"
    ]
   },
   {
@@ -41,7 +41,7 @@
    "outputs": [],
    "source": [
     "spark_session = SparkSession.builder\\\n",
-    "        .master(addr_master) \\\n",
+    "        .master(f\"spark://{IP}:7077\") \\\n",
     "        .appName(\"ECAtemp\")\\\n",
     "        .config(\"spark.dynamicAllocation.enabled\", True)\\\n",
     "        .config(\"spark.dynamicAllocation.shuffleTracking.enabled\",True)\\\n",
@@ -55,6 +55,47 @@
     "sc = spark_session.sparkContext\n",
     "\n",
     "sc.setLogLevel(\"ERROR\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "All the data should have been extracted to HDFS. Load the data:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_root = f\"hdfs://{IP}:9000/data/\"\n",
+    "rdds = {}\n",
+    "\n",
+    "for data_id in (\"tx\", \"tn\"):\n",
+    "\tdata_dir = data_root + data_id\n",
+    "\trdds[data_id] = sc.textFile(data_dir)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Read the data skipping the info lines:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for data_id in (\"tx\", \"tn\"):\n",
+    "\trdds[data_id].zipWithIndex().\\\n",
+    "\t\tfilter(lambda x: x[1] >= 20).\\\n",
+    "\t\tmap(lambda x: x[0]).\\\n",
+    "\t\ttoDF()"
    ]
   }
  ],
