Fix indentation & line breaking, auto core count

--- a/eca_trend.ipynb
+++ b/eca_trend.ipynb
@@ -8,7 +8,8 @@
    "source": [
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "from multiprocessing import cpu_count"
    ]
   },
   {
@@ -31,7 +32,7 @@
    "outputs": [],
    "source": [
     "IP = \"192.168.1.1\"  # rember to set the real IP!\n",
-    "cores = 4"
+    "cores = cpu_count()"
    ]
   },
   {
@@ -51,7 +52,7 @@
    ],
    "source": [
     "spark_session = SparkSession.builder\\\n",
-    "        .master(f\"spark://{IP}:7077\") \\\n",
+    "        .master(f\"spark://{IP}:7077\")\\\n",
     "        .appName(\"ECAtemp\")\\\n",
     "        .config(\"spark.dynamicAllocation.enabled\", True)\\\n",
     "        .config(\"spark.dynamicAllocation.shuffleTracking.enabled\",True)\\\n",
@@ -84,8 +85,8 @@
     "rdds = {}\n",
     "\n",
     "for data_id in (\"tx\", \"tn\"):\n",
-    "\tdata_dir = data_root + data_id\n",
-    "\trdds[data_id] = sc.textFile(data_dir)"
+    "    data_dir = data_root + data_id\n",
+    "    rdds[data_id] = sc.textFile(data_dir)"
    ]
   },
   {
@@ -104,20 +105,20 @@
     "def Preprocess(rdd):\n",
     "\n",
     "    # read every file excluding first 20 lines\n",
-    "    rdd = rdd.\\\n",
-    "        zipWithIndex().\\\n",
-    "\t\tfilter(lambda x: x[1] >= 20).\\\n",
-    "\t\tmap(lambda x: (x[0], )).\\\n",
-    "\t\ttoDF()\n",
+    "    rdd = rdd\\\n",
+    "        .zipWithIndex()\\\n",
+    "        .filter(lambda x: x[1] >= 20)\\\n",
+    "        .map(lambda x: (x[0], ))\\\n",
+    "        .toDF()\n",
     "\n",
     "    # get column names from 1st row\n",
     "    column_names = rdd.first()[\"_1\"].split(\",\")\n",
     "    column_names = [x.strip() for x in column_names]\n",
     "    # drop 1st row\n",
     "    rdd = rdd.withColumn(\"index\", monotonically_increasing_id())\n",
-    "    rdd = rdd.\\\n",
-    "        filter(rdd.index > 0).\\\n",
-    "        drop(\"index\")\n",
+    "    rdd = rdd\\\n",
+    "        .filter(rdd.index > 0)\\\n",
+    "        .drop(\"index\")\n",
     "\n",
     "    # form columns\n",
     "    for i,name in enumerate(column_names):\n",
