Preview data files before loading

--- a/eca_trend.ipynb
+++ b/eca_trend.ipynb
@@ -9,6 +9,7 @@
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import pandas as pd\n",
+    "import subprocess\n",
     "from multiprocessing import cpu_count"
    ]
   },
@@ -46,7 +47,7 @@
      "text": [
       "Setting default log level to \"WARN\".\n",
       "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
-      "24/07/31 21:23:25 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
+      "24/08/01 10:22:55 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
      ]
     }
    ],
@@ -72,12 +73,138 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "All the data should have been extracted to HDFS. Load the data:"
+    "### Data at a glance"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "All the data should have been extracted to HDFS: ```/data/tx/``` and ```/data/tn/``` for maximum and minimum temperatures, respectively."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Preview the contents of the directories:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 2064 items\n",
+      "-rw-r--r--   1 ubuntu supergroup    1637898 2024-08-01 10:01 /data/tx/TX_STAID000002.txt\n",
+      "-rw-r--r--   1 ubuntu supergroup    1874571 2024-08-01 10:01 /data/tx/TX_STAID000004.txt\n",
+      "-rw-r--r--   1 ubuntu supergroup    1874582 2024-08-01 10:01 /data/tx/TX_STAID000005.txt\n",
+      "-rw-r--r--   1 ubuntu supergroup    1080231 2024-08-01 10:01 /data/tx/TX_STAID000007.txt\n",
+      "-rw-r--r--   1 ubuntu supergroup    1874586 2024-08-01 10:01 /data/tx/TX_STAID000008.txt\n",
+      "-rw-r--r--   1 ubuntu supergroup    1874592 2024-08-01 10:01 /data/tx/TX_STAID000009.txt\n",
+      "-rw-r--r--   1 ubuntu supergroup    1874571 2024-08-01 10:01 /data/tx/TX_STAID000010.txt\n",
+      "-rw-r--r--   1 ubuntu supergroup    1979781 2024-08-01 10:01 /data/tx/TX_STAID000011.txt\n",
+      "-rw-r--r--   1 ubuntu supergroup    1716813 2024-08-01 10:01 /data/tx/TX_STAID000012.txt\n",
+      "\n",
+      "Found 2064 items\n",
+      "-rw-r--r--   1 ubuntu supergroup    1637896 2024-08-01 09:56 /data/tn/TN_STAID000002.txt\n",
+      "-rw-r--r--   1 ubuntu supergroup    1874571 2024-08-01 09:56 /data/tn/TN_STAID000004.txt\n",
+      "-rw-r--r--   1 ubuntu supergroup    1874582 2024-08-01 09:56 /data/tn/TN_STAID000005.txt\n",
+      "-rw-r--r--   1 ubuntu supergroup    1080231 2024-08-01 09:56 /data/tn/TN_STAID000007.txt\n",
+      "-rw-r--r--   1 ubuntu supergroup    1874586 2024-08-01 09:56 /data/tn/TN_STAID000008.txt\n",
+      "-rw-r--r--   1 ubuntu supergroup    1874592 2024-08-01 09:56 /data/tn/TN_STAID000009.txt\n",
+      "-rw-r--r--   1 ubuntu supergroup    1874571 2024-08-01 09:56 /data/tn/TN_STAID000010.txt\n",
+      "-rw-r--r--   1 ubuntu supergroup    1979781 2024-08-01 09:56 /data/tn/TN_STAID000011.txt\n",
+      "-rw-r--r--   1 ubuntu supergroup    1716820 2024-08-01 09:56 /data/tn/TN_STAID000012.txt\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "for data_id in (\"tx\", \"tn\"):\n",
+    "    p = subprocess.run([\"/home/ubuntu/hadoop-3.3.6/bin/hdfs\",\n",
+    "                        \"dfs\", \"-ls\", f\"/data/{data_id}\"],\n",
+    "                       check=True, capture_output=True)\n",
+    "    ls_head = subprocess.run(\"head\", input=p.stdout, capture_output=True)\n",
+    "    print(ls_head.stdout.decode())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Get a preview of the first file in ```/data/tx/```:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "EUROPEAN CLIMATE ASSESSMENT & DATASET (ECA&D), file created on: 13-07-2024\n",
+      "THESE DATA CAN BE USED FOR NON-COMMERCIAL RESEARCH AND EDUCATION PROVIDED THAT THE FOLLOWING SOURCE IS ACKNOWLEDGED: \n",
+      "\n",
+      "Klein Tank, A.M.G. and Coauthors, 2002. Daily dataset of 20th-century surface\n",
+      "air temperature and precipitation series for the European Climate Assessment.\n",
+      "Int. J. of Climatol., 22, 1441-1453.\n",
+      "Data and metadata available at http://www.ecad.eu\n",
+      "\n",
+      "FILE FORMAT (MISSING VALUE CODE = -9999):\n",
+      "\n",
+      "01-06 STAID: Station identifier\n",
+      "08-13 SOUID: Source identifier\n",
+      "15-22 DATE : Date YYYYMMDD\n",
+      "24-28 TX   : Maximum temperature in 0.1 &#176;C\n",
+      "30-34 Q_TX : quality code for TX (0='valid'; 1='suspect'; 9='missing')\n",
+      "\n",
+      "This is the blended series of station FALUN, SWEDEN (STAID: 2)\n",
+      "Blended and updated with sources:7 36438 \n",
+      "See files sources.txt and stations.txt for more info.\n",
+      "\n",
+      "STAID, SOUID,    DATE,   TX, Q_TX\n",
+      "     2, 36438,19000101,   18,    0\n",
+      "     2, 36438,19000102,  -10,    0\n",
+      "     2, 36438,19000103,  -20,    0\n",
+      "     2, 36438,19000104,  -30,    0\n",
+      "     2, 36438,19000105,  -60,    0\n",
+      "     2, 36438,19000106, -150,    0\n",
+      "     2, 36438,19000107,  -90,    0\n",
+      "     2, 36438,19000108,  -40,    0\n",
+      "     2, 36438,19000109,  -40,    0\n"
+     ]
+    }
+   ],
+   "source": [
+    "ls = subprocess.Popen([\"/home/ubuntu/hadoop-3.3.6/bin/hdfs\",\n",
+    "                       \"dfs\", \"-ls\", \"/data/tx\"],\n",
+    "                      stdout=subprocess.PIPE)\n",
+    "sample_file = ls.communicate()[0].decode().split(\"\\n\")[1].strip().split()[-1]\n",
+    "\n",
+    "cat = subprocess.Popen([\"/home/ubuntu/hadoop-3.3.6/bin/hdfs\",\n",
+    "                        \"dfs\", \"-cat\", sample_file],\n",
+    "                       stdout=subprocess.PIPE)\n",
+    "preview = \"\\n\".join(cat.communicate()[0].decode().split(\"\\n\")[:30])\n",
+    "print(preview)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Load & preprocess data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,12 +220,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Preprocess the data:"
+    "We need to preprocess the max and min temperature data by exluding the first 20 lines from each file and converting the rest into a proper dataframe:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
