Load metadata, more preproc, don't call DFs RDDs

--- a/eca_trend.ipynb
+++ b/eca_trend.ipynb
@@ -32,6 +32,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "HDFS_EXE = \"/home/ubuntu/hadoop-3.3.6/bin/hdfs\"\n",
     "IP = \"192.168.1.1\"  # rember to set the real IP!\n",
     "cores = cpu_count()"
    ]
@@ -47,7 +48,7 @@
      "text": [
       "Setting default log level to \"WARN\".\n",
       "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
-      "24/08/01 10:22:55 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
+      "24/08/01 15:35:46 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
      ]
     }
    ],
@@ -80,7 +81,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "All the data should have been extracted to HDFS: ```/data/tx/``` and ```/data/tn/``` for maximum and minimum temperatures, respectively."
+    "All the data should have been extracted to HDFS: ```/data/tx/``` and ```/data/tn/``` for maximum and minimum temperatures, respectively. In addition, there is a station metadata file: ```/data/station_data.txt```."
    ]
   },
   {
@@ -92,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -126,11 +127,10 @@
    ],
    "source": [
     "for data_id in (\"tx\", \"tn\"):\n",
-    "    p = subprocess.run([\"/home/ubuntu/hadoop-3.3.6/bin/hdfs\",\n",
-    "                        \"dfs\", \"-ls\", f\"/data/{data_id}\"],\n",
+    "    p = subprocess.run([HDFS_EXE, \"dfs\", \"-ls\", f\"/data/{data_id}\"],\n",
     "                       check=True, capture_output=True)\n",
-    "    ls_head = subprocess.run(\"head\", input=p.stdout, capture_output=True)\n",
-    "    print(ls_head.stdout.decode())"
+    "    p = subprocess.run(\"head\", input=p.stdout, capture_output=True)\n",
+    "    print(p.stdout.decode())"
    ]
   },
   {
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -178,21 +178,60 @@
       "     2, 36438,19000106, -150,    0\n",
       "     2, 36438,19000107,  -90,    0\n",
       "     2, 36438,19000108,  -40,    0\n",
-      "     2, 36438,19000109,  -40,    0\n"
+      "     2, 36438,19000109,  -40,    0\n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "ls = subprocess.Popen([\"/home/ubuntu/hadoop-3.3.6/bin/hdfs\",\n",
-    "                       \"dfs\", \"-ls\", \"/data/tx\"],\n",
-    "                      stdout=subprocess.PIPE)\n",
-    "sample_file = ls.communicate()[0].decode().split(\"\\n\")[1].strip().split()[-1]\n",
+    "p = subprocess.run([HDFS_EXE, \"dfs\", \"-ls\", \"/data/tx\"],\n",
+    "                   check=True, capture_output=True)\n",
+    "p = subprocess.run(\"head\", input=p.stdout, capture_output=True)\n",
+    "sample_file = p.stdout.decode().split(\"\\n\")[1].strip().split()[-1]\n",
     "\n",
-    "cat = subprocess.Popen([\"/home/ubuntu/hadoop-3.3.6/bin/hdfs\",\n",
-    "                        \"dfs\", \"-cat\", sample_file],\n",
-    "                       stdout=subprocess.PIPE)\n",
-    "preview = \"\\n\".join(cat.communicate()[0].decode().split(\"\\n\")[:30])\n",
+    "p = subprocess.run([HDFS_EXE, \"dfs\", \"-cat\", sample_file],\n",
+    "                   check=True, capture_output=True)\n",
+    "p = subprocess.run([\"head\", \"-30\"], input=p.stdout, capture_output=True)\n",
+    "preview = p.stdout.decode()\n",
     "print(preview)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Get a preview of the metadata file:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "STAID,STANAME,CN,LAT,LON,HGHT\n",
+      "2,FALUN,SE,60.616667,15.616667,160\n",
+      "4,LINKOEPING,SE,58.4,15.533056,93\n",
+      "5,LINKOEPING-MALMSLAETT,SE,58.4,15.533056,93\n",
+      "7,KARLSTAD-AIRPORT,SE,59.444444,13.3375,107\n",
+      "8,OESTERSUND,SE,63.183056,14.483056,376\n",
+      "9,OESTERSUND-FROESOEN,SE,63.183056,14.483056,376\n",
+      "10,STOCKHOLM,SE,59.35,18.05,44\n",
+      "11,KREMSMUENSTER (TAWES),AT,48.055,14.130833,382\n",
+      "12,GRAZ-UNIVERSITAET,AT,47.077778,15.448889,367\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "p = subprocess.run([HDFS_EXE, \"dfs\", \"-cat\", \"/data/station_data.txt\"],\n",
+    "                   check=True, capture_output=True)\n",
+    "p = subprocess.run(\"head\", input=p.stdout, capture_output=True)\n",
+    "preview_meta = p.stdout.decode()\n",
+    "print(preview_meta)"
    ]
   },
   {
@@ -204,12 +243,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "data_root = f\"hdfs://{IP}:9000/data/\"\n",
     "rdds = {}\n",
+    "dfs  = {}\n",
     "\n",
     "for data_id in (\"tx\", \"tn\"):\n",
     "    data_dir = data_root + data_id\n",
@@ -225,40 +265,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def Preprocess(rdd):\n",
+    "def Preprocess_step1(rdd):\n",
     "\n",
     "    # read every file excluding first 20 lines\n",
-    "    rdd = rdd\\\n",
+    "    df = rdd\\\n",
     "        .zipWithIndex()\\\n",
     "        .filter(lambda x: x[1] >= 20)\\\n",
     "        .map(lambda x: (x[0], ))\\\n",
     "        .toDF()\n",
     "\n",
     "    # get column names from 1st row\n",
-    "    column_names = rdd.first()[\"_1\"].split(\",\")\n",
+    "    column_names = df.first()[\"_1\"].split(\",\")\n",
     "    column_names = [x.strip() for x in column_names]\n",
     "    # drop 1st row\n",
-    "    rdd = rdd.withColumn(\"index\", monotonically_increasing_id())\n",
-    "    rdd = rdd\\\n",
-    "        .filter(rdd.index > 0)\\\n",
+    "    df = df.withColumn(\"index\", monotonically_increasing_id())\n",
+    "    df = df\\\n",
+    "        .filter(df.index > 0)\\\n",
     "        .drop(\"index\")\n",
     "\n",
     "    # form columns\n",
     "    for i,name in enumerate(column_names):\n",
-    "        rdd = rdd.withColumn(name, split(rdd[\"_1\"], \",\").getItem(i))\n",
-    "        rdd = rdd.withColumn(name, rdd[name].cast(\"int\"))\n",
-    "    rdd = rdd.drop(\"_1\")\n",
+    "        df = df.withColumn(name, split(df[\"_1\"], \",\").getItem(i))\n",
+    "        df = df.withColumn(name, df[name].cast(\"int\"))\n",
+    "    df = df.drop(\"_1\")\n",
     "\n",
-    "    return rdd"
+    "    return df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -342,8 +382,183 @@
    ],
    "source": [
     "for data_id in (\"tx\", \"tn\"):\n",
-    "    rdds[data_id] = Preprocess(rdds[data_id])\n",
-    "    rdds[data_id].show()"
+    "    dfs[data_id] = Preprocess_step1(rdds[data_id])\n",
+    "    dfs[data_id].show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Then we need to convert the date from string to an appropriate type and place NAs where missing values are:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def Preprocess_step2(df, data_id):\n",
+    "    temper_col = data_id.upper()\n",
+    "    df = df.withColumn(\"DATE\", to_date(df[\"DATE\"], format=\"yyyyMMdd\"))\n",
+    "    df = df.withColumn(temper_col, when(df[f\"Q_{temper_col}\"]==0,\n",
+    "                                        df[temper_col]).otherwise(None))\n",
+    "    return df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-----+-----+----------+----+----+\n",
+      "|STAID|SOUID|      DATE|  TX|Q_TX|\n",
+      "+-----+-----+----------+----+----+\n",
+      "|    2|36438|1900-01-01|  18|   0|\n",
+      "|    2|36438|1900-01-02| -10|   0|\n",
+      "|    2|36438|1900-01-03| -20|   0|\n",
+      "|    2|36438|1900-01-04| -30|   0|\n",
+      "|    2|36438|1900-01-05| -60|   0|\n",
+      "|    2|36438|1900-01-06|-150|   0|\n",
+      "|    2|36438|1900-01-07| -90|   0|\n",
+      "|    2|36438|1900-01-08| -40|   0|\n",
+      "|    2|36438|1900-01-09| -40|   0|\n",
+      "|    2|36438|1900-01-10| -10|   0|\n",
+      "|    2|36438|1900-01-11| -24|   0|\n",
+      "|    2|36438|1900-01-12|-120|   0|\n",
+      "|    2|36438|1900-01-13|-100|   0|\n",
+      "|    2|36438|1900-01-14| -60|   0|\n",
+      "|    2|36438|1900-01-15| -70|   0|\n",
+      "|    2|36438|1900-01-16| -10|   0|\n",
+      "|    2|36438|1900-01-17| -20|   0|\n",
+      "|    2|36438|1900-01-18| -20|   0|\n",
+      "|    2|36438|1900-01-19| -34|   0|\n",
+      "|    2|36438|1900-01-20| -20|   0|\n",
+      "+-----+-----+----------+----+----+\n",
+      "only showing top 20 rows\n",
+      "\n",
+      "root\n",
+      " |-- STAID: integer (nullable = true)\n",
+      " |-- SOUID: integer (nullable = true)\n",
+      " |-- DATE: date (nullable = true)\n",
+      " |-- TX: integer (nullable = true)\n",
+      " |-- Q_TX: integer (nullable = true)\n",
+      "\n",
+      "+-----+-----+----------+----+----+\n",
+      "|STAID|SOUID|      DATE|  TN|Q_TN|\n",
+      "+-----+-----+----------+----+----+\n",
+      "|    2|36439|1900-01-01| -30|   0|\n",
+      "|    2|36439|1900-01-02| -50|   0|\n",
+      "|    2|36439|1900-01-03| -70|   0|\n",
+      "|    2|36439|1900-01-04|-110|   0|\n",
+      "|    2|36439|1900-01-05|-190|   0|\n",
+      "|    2|36439|1900-01-06|-220|   0|\n",
+      "|    2|36439|1900-01-07|-200|   0|\n",
+      "|    2|36439|1900-01-08|-110|   0|\n",
+      "|    2|36439|1900-01-09| -80|   0|\n",
+      "|    2|36439|1900-01-10| -60|   0|\n",
+      "|    2|36439|1900-01-11|-160|   0|\n",
+      "|    2|36439|1900-01-12|-210|   0|\n",
+      "|    2|36439|1900-01-13|-220|   0|\n",
+      "|    2|36439|1900-01-14|-130|   0|\n",
+      "|    2|36439|1900-01-15|-190|   0|\n",
+      "|    2|36439|1900-01-16|-110|   0|\n",
+      "|    2|36439|1900-01-17| -60|   0|\n",
+      "|    2|36439|1900-01-18| -60|   0|\n",
+      "|    2|36439|1900-01-19|-130|   0|\n",
+      "|    2|36439|1900-01-20|-120|   0|\n",
+      "+-----+-----+----------+----+----+\n",
+      "only showing top 20 rows\n",
+      "\n",
+      "root\n",
+      " |-- STAID: integer (nullable = true)\n",
+      " |-- SOUID: integer (nullable = true)\n",
+      " |-- DATE: date (nullable = true)\n",
+      " |-- TN: integer (nullable = true)\n",
+      " |-- Q_TN: integer (nullable = true)\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "for data_id in (\"tx\", \"tn\"):\n",
+    "    dfs[data_id] = Preprocess_step2(dfs[data_id], data_id)\n",
+    "    dfs[data_id].show()\n",
+    "    dfs[data_id].printSchema()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Lastly, we need to read the station metadata."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-----+--------------------+---+---------+---------+----+\n",
+      "|STAID|             STANAME| CN|      LAT|      LON|HGHT|\n",
+      "+-----+--------------------+---+---------+---------+----+\n",
+      "|    2|               FALUN| SE| 60.61667|15.616667| 160|\n",
+      "|    4|          LINKOEPING| SE|     58.4|15.533056|  93|\n",
+      "|    5|LINKOEPING-MALMSL...| SE|     58.4|15.533056|  93|\n",
+      "|    7|    KARLSTAD-AIRPORT| SE|59.444443|  13.3375| 107|\n",
+      "|    8|          OESTERSUND| SE|63.183056|14.483056| 376|\n",
+      "|    9| OESTERSUND-FROESOEN| SE|63.183056|14.483056| 376|\n",
+      "|   10|           STOCKHOLM| SE|    59.35|    18.05|  44|\n",
+      "|   11|KREMSMUENSTER (TA...| AT|   48.055|14.130833| 382|\n",
+      "|   12|   GRAZ-UNIVERSITAET| AT|47.077778|15.448889| 367|\n",
+      "|   13|      INNSBRUCK-UNIV| AT|    47.26|11.384167| 578|\n",
+      "|   14|  SALZBURG-FLUGHAFEN| AT|47.789165|13.008056| 430|\n",
+      "|   15|   SONNBLICK (TAWES)| AT| 47.05417|  12.9575|3109|\n",
+      "|   16|     WIEN-HOHE WARTE| AT|48.248333|16.356388| 198|\n",
+      "|   21|         ZAGREB-GRIC| HR|45.816666|15.978056| 156|\n",
+      "|   28| HELSINKI KAISANIEMI| FI|   60.175|24.947779|   4|\n",
+      "|   29|JYVASKYLA LENTOASEMA| FI|62.401943|25.678333| 139|\n",
+      "|   30|SODANKYLA. LAPIN ...| FI| 67.36583|26.633057| 179|\n",
+      "|   32|             BOURGES| FR|47.059166| 2.359444| 161|\n",
+      "|   33|    TOULOUSE-BLAGNAC| FR|43.620834| 1.378889| 151|\n",
+      "|   34|   BORDEAUX-MERIGNAC| FR|44.830555| 0.691389|  47|\n",
+      "+-----+--------------------+---+---------+---------+----+\n",
+      "only showing top 20 rows\n",
+      "\n",
+      "root\n",
+      " |-- STAID: string (nullable = true)\n",
+      " |-- STANAME: string (nullable = true)\n",
+      " |-- CN: string (nullable = true)\n",
+      " |-- LAT: float (nullable = true)\n",
+      " |-- LON: float (nullable = true)\n",
+      " |-- HGHT: integer (nullable = true)\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "meta = spark_session.read.csv(data_root + \"station_data.txt\", header=True)\n",
+    "for col in (\"LAT\", \"LON\"):\n",
+    "    meta = meta.withColumn(col, meta[col].cast(\"float\"))\n",
+    "meta = meta.withColumn(\"HGHT\", meta[\"HGHT\"].cast(\"int\"))\n",
+    "meta.show()\n",
+    "meta.printSchema()"
    ]
   },
   {
@@ -355,7 +570,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## TEST CELLS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-----+---+\n",
+      "|    a|  b|\n",
+      "+-----+---+\n",
+      "|   18|  0|\n",
+      "|-9999|  9|\n",
+      "|   45|  0|\n",
+      "|  -56|  1|\n",
+      "|-9999|  9|\n",
+      "+-----+---+\n",
+      "\n",
+      "+----+---+\n",
+      "|   a|  b|\n",
+      "+----+---+\n",
+      "|  18|  0|\n",
+      "|NULL|  9|\n",
+      "|  45|  0|\n",
+      "|NULL|  1|\n",
+      "|NULL|  9|\n",
+      "+----+---+\n",
+      "\n",
+      "+---+---+\n",
+      "|  a|  b|\n",
+      "+---+---+\n",
+      "| 18|  0|\n",
+      "| 45|  0|\n",
+      "+---+---+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "tst = spark_session.createDataFrame([(18, 0), (-9999, 9), (45, 0), (-56, 1), (-9999, 9)], (\"a\", \"b\"))\n",
+    "tst.show()\n",
+    "tst = tst.withColumn(\"a\", when(tst[\"b\"]==0, tst[\"a\"]).otherwise(None))\n",
+    "tst.show()\n",
+    "tst.dropna(\"any\").show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
