--- a/eca_trend.ipynb
+++ b/eca_trend.ipynb
@@ -842,8 +842,8 @@
    "outputs": [],
    "source": [
     "for data_id in (\"tx\", \"tn\"):\n",
-    "    result_avg_pandas[data_id].to_csv(f\"result_{data_id}_avg.csv\", index=False)\n",
-    "    result_trend_pandas[data_id].to_csv(f\"result_{data_id}_trend.csv\", index=False)"
+    "    result_avg_pandas[data_id].to_csv(f\"results/result_{data_id}_avg.csv\", index=False)\n",
+    "    result_trend_pandas[data_id].to_csv(f\"results/result_{data_id}_trend.csv\", index=False)"
    ]
   },
   {
@@ -911,7 +911,7 @@
     "\n",
     "ax[0].tick_params(axis=\"x\", bottom=True, labelbottom=True)\n",
     "\n",
-    "plt.savefig(\"result.png\", dpi=300, bbox_inches=\"tight\")\n",
+    "plt.savefig(\"results/result.png\", dpi=300, bbox_inches=\"tight\")\n",
     "plt.show()"
    ]
   },
